# SuperFreq

./: .gitignore  .travis.yml  CHANGES.md  MANIFEST.in  README.md  README.rst  _naff.pyx  brent.c  brent.h  dev-environment.yml  naff.py  pip-requirements.txt  readthedocs.yml  setup.cfg  setup.py
docs/: Makefile  conf.py  dev.rst  getting-started.rst  index.rst  install.rst  reference-api.rst
docs/superfreq/: index.rst
old_docs/: conf.py  index.rst
superfreq/: __init__.py  _naff.pyx  core.py  log.py  naff.py  setup_package.py  simpsgauss.pyx  version.py
superfreq/tests/: helpers.py  test_actions.py  test_core.py  test_harmonic_oscillator.py  test_isochrone.py  test_naff.py  test_simple.py
superfreq/tests/data/: generate.py
