[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = superfreq
description = Orbital frequency analysis (Astropy affiliated package)
long_description = This is a package for computing actions and fundamental frequencies of orbits.
author = Adrian M. Price-Whelan
author_email = adrn@astro.columbia.edu
license = MIT
url = http://adrian.pw/superfreq
edit_on_github = True
github_project = adrn/SuperFreq
