[metadata]
name = superfreq
version = 0.2.dev
author = Adrian M. Price-Whelan
author_email = adrianmpw@gmail.com
description = Orbital frequency analysis
long_description =
license = MIT
url = https://github.com/adrn/superfreq
edit_on_github = False
github_project = adrn/superfreq
python_requires = ">=3.6"

[options]
install_requires = astropy; astro-gala
zip_safe = False
use_2to3 = False

[options.entry_points]


[options.package_data]
* = *.c
packagename = data/*
packagename.tests = coveragerc

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
